# ComfyUI-Civitai-Toolkit

./: .gitignore  CHANGELOG.md  README.md  README_ZH.md  __init__.py  api.py  nodes.py  nodes_display.py  nodes_gallery.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build-pipeline.yml
example_workflows/: Model_DeepResearch.json  Recipe_Gallery.json
js/: civitai_browser.js  display.js  gallery.js  global_settings.js  local_manager.js  manager.js  notifications.js
workflow_examples/: LoRA_Trigger_Words.json  Model_DeepResearch.json
