[project]
name = "civitai-toolkit"
description ="All-in-one Civitai integration center for ComfyUI — browse online models, manage local assets,analyze community trends, and instantly apply full recipes within your workflow.（为 ComfyUI 打造的一站式 Civitai 集成中心：在线浏览模型、本地管理资源、分析社区趋势，并在工作流中即时加载完整配方。）"
version = "4.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BAIKEMARK/ComfyUI-Civitai-Recipe"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/BAIKEMARK/ComfyUI-Civitai-Recipe/wiki"
"Bug Tracker" = "https://github.com/BAIKEMARK/ComfyUI-Civitai-Recipe/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0"
]

[tool]
[tool.comfy]
PublisherId = "baike-mark"
DisplayName = "Civitai Recipe Finder"
Icon = ""
includes = []
[tool.setuptools]
packages = ["js"]
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility